kube_files/app5000-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app5000
  name: app5000
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app5000
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: app5000
    spec:
      containers:
      - image: docker.io/angelosth/app5000
        imagePullPolicy: ""
        name: app5000
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /nrv
          name: app5000-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: app5000-claim0
        persistentVolumeClaim:
          claimName: app5000-claim0
status: {}
