kube_files/send-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: send
  name: send
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: send
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: send
    spec:
      containers:
      - image: docker.io/angelosth/send
        imagePullPolicy: ""
        name: send
        ports:
        - containerPort: 3000
        - containerPort: 465
        resources: {}
        volumeMounts:
        - mountPath: /nrv
          name: send-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: send-claim0
        persistentVolumeClaim:
          claimName: send-claim0
status: {}
