kube_files/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: app3
  name: app3
spec:
  ports:
  - name: "4001"
    port: 4001
    targetPort: 4001
  selector:
    io.kompose.service: app3
status:
  loadBalancer: {}
