kube_files/send-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: send
  name: send
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  - name: "465"
    port: 465
    targetPort: 465
  selector:
    io.kompose.service: send
status:
  loadBalancer: {}
